<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstOperandLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp">
            <EditText
                android:id="@+id/firstOperand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/firstOperand">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/addition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addition"/>
                <RadioButton
                    android:id="@+id/subtraction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtraction"/>
                <RadioButton
                    android:id="@+id/multiplication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multiplication"/>
                <RadioButton
                    android:id="@+id/division"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/division"/>
                <RadioButton
                    android:id="@+id/modulus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modulus"/>
            </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/secondOperandLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp">
            <EditText
                android:id="@+id/secondOperand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/secondOperand">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/equalsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>